Read Smallest font settings from the proper config

General group in kdeglobals is uppercase

BUG:490890